# TestRepository

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_OVERVIEW.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  socketbus.py  socketio.py
app/blueprints/: __init__.py  admin.py  pruefung.py  signallisten.py  start.py
app/models/: signale.py
app/services/: __init__.py  iec_client.py  iec_server.py  scenarios.py  stream_bus.py
app/static/: app.js  tailwind.css
app/static/css/: tailwind.css
app/static/js/: stream.js
app/templates/: admin.html  base.html  start.html
app/templates/admin/: index.html
app/templates/pruefung/: index.html  monitor.html  senden.html  verbindung.html
app/templates/signallisten/: import.html  index.html
app/templates/start/: index.html
app/utils/: hex.py  time.py  validation.py
tests/: conftest.py  test_admin.py  test_client_service.py  test_config.py  test_loopback.py  test_loopback_iec104.py  test_routes.py  test_server_service.py  test_signallist_import.py  test_signallisten.py  test_socketbus.py  test_socketio_stream.py  test_stream_bus.py  test_utils.py  test_websocket_smoke.py
wngw-test-tool/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md
wngw-test-tool/backend/: pyproject.toml  requirements.txt
wngw-test-tool/backend/local_iec104_lib/: pyproject.toml
wngw-test-tool/backend/local_iec104_lib/src/iec104/: __init__.py
wngw-test-tool/backend/openpyxl/: __init__.py
wngw-test-tool/backend/tests/: conftest.py
wngw-test-tool/backend/tests/integration/: test_adapter_smoke.py
wngw-test-tool/backend/tests/unit/: test_signal_lists.py
wngw-test-tool/backend/wngw_app/: __init__.py  config.py  main.py
wngw-test-tool/backend/wngw_app/api/: routes_admin.py  routes_signal_lists.py  routes_tests.py  ws_live.py
wngw-test-tool/backend/wngw_app/domain/: events.py  models.py
wngw-test-tool/backend/wngw_app/repo/: file_storage.py
wngw-test-tool/backend/wngw_app/services/: livebus.py  protocol_store.py  signal_lists.py
wngw-test-tool/backend/wngw_app/services/iec104/: adapter_lib.py  contract.py  factory.py
wngw-test-tool/frontend/: .eslintrc.cjs  index.html  package.json
wngw-test-tool/frontend/src/: App.tsx  main.tsx  router.tsx
wngw-test-tool/frontend/src/components/layout/: Footer.tsx  Header.tsx  LeftSidebar.tsx  RightSidebar.tsx  Tabs.tsx
wngw-test-tool/frontend/src/components/live/: FrameInspector.tsx  LiveLogView.test.tsx  LiveLogView.tsx
wngw-test-tool/frontend/src/components/ui/: DataTable.tsx  Dialog.tsx  FormField.tsx  Toast.tsx
wngw-test-tool/frontend/src/lib/: apiClient.ts  i18n.ts
wngw-test-tool/frontend/src/pages/admin/: Language.tsx  Partners.tsx  TestConfig.tsx
wngw-test-tool/frontend/src/pages/pruefung/: Config.tsx  Protocols.tsx
wngw-test-tool/frontend/src/pages/signallisten/: Upload.tsx
wngw-test-tool/frontend/src/pages/start/: Start.tsx
