[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iec104-testbench"
version = "0.1.0"
description = "Web-based IEC 60870-5-104 functional testing tool"
authors = [{name = "Lab"}]
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "Flask-SocketIO>=5.3",
    "python-dotenv",
    "PyYAML",
    "SQLAlchemy>=2.0",
    "alembic>=1.12",
    "pydantic>=2.5",
    "itsdangerous",
    "email-validator",
    "Werkzeug",
    "eventlet>=0.34",
    "flask-bcrypt",
    "flask-login",
    "flask-wtf",
    "WTForms",
    "python-socketio[client]>=5.10",
    "pandas>=2.1",
    "tabulate",
    "typing-extensions",
    "httpx",
    "uvicorn",
    "iec104"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-flask",
    "pytest-socketio",
    "mypy",
    "ruff",
    "black",
    "types-PyYAML",
    "types-tabulate",
    "types-requests"
]

[project.scripts]
iec104-testbench = "app.cli:main"

[tool.setuptools.packages.find]
where = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "S", "C4", "TID", "SIM", "RUF"]
ignore = ["E203", "E266", "E501", "B008", "S101"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning"
]
